--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
                     <div class="inner">
                         <h3>150</h3>
 
-                        <p>New Orders</p>
+                        <p>BackUp -- {{isBackUp}} </p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-bag"></i>
