--- a/src/app/components/ticket/ticketsdetail/ticketsdetail.component.html
+++ b/src/app/components/ticket/ticketsdetail/ticketsdetail.component.html
@@ -6,7 +6,7 @@
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="javascript:void()">Customer</a></li>
+                    <li class="breadcrumb-item"><a href="javascript:void()" routerLink="/customer">Customer</a></li>
                     <li class="breadcrumb-item active">TicketsDetail</li>
                 </ol>
             </div>
@@ -18,7 +18,7 @@
 <!-- Main content -->
 <section class="content">
     <div class="card-header">
-        <h3 class="card-title">Customer Name : {{customerObj.customerFirstName}}</h3>
+        <h3 class="card-title">Customer Name : {{customerObj.customerFirstName}} {{customerObj.customerLastName}}</h3>
     </div>
     <div class="row">
         <div class="col-12">
@@ -47,42 +47,42 @@
                         *ngIf="(ticketInfoResponse | filter: searchText).length > 0; else noResults">
                         <thead>
                             <tr>
-                                <th>Id</th>
+                                <th></th>
                                 <th>Ticket Number</th>
                                 <th>Ticket PNR</th>
                                 <th>Retail Price</th>
-                                <th>Due Amount</th>
                                 <th>Paid Amount</th>
+                                <th>Remaining Amount</th>
                                 <!-- <th>Installment</th> -->
                                 <th>Booking Date</th>
                                 <th>From Location</th>
                                 <th>To Location</th>
-                                <th>Add Detail</th>
                                 <th>Action</th>
+                                <th>Add Instalment</th>
 
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let r of ticketInfoResponse| filter:searchText;let i=index;"
-                                [ngClass]="r.ticketAmountPaid<r.ticketRetail?'bg-color':''">
-                                <td>{{i+1}}</td>
+                            <tr *ngFor="let r of ticketInfoResponse| filter:searchText;let i=index;">
+                                <td><img id="blah" *ngIf="r.ticketAmountPaid<r.ticketRetail" src="/assets/dist/img/notification.gif"  style="height: 30px;" alt="your image" /></td>
                                 <td>{{r.ticketNumber}}</td>
                                 <td>{{r.ticketPNR}}</td>
                                 <td>{{r.ticketRetail}}</td>
-                                <td>{{(r.ticketRetail-r.ticketAmountPaid)}}</td>
                                 <td>{{r.ticketAmountPaid}}</td>
+                                <td>{{(r.ticketRetail-r.ticketAmountPaid)}}</td>
                                 <td>{{r.bookingDate|date:'dd-MMM-yyyy'}}</td>
                                 <td>{{r.fromLocation}}</td>
                                 <td>{{r.toLocation}}</td>
-                                <td><a class="">Add</a></td>
                                 <td>
-                                    <a class="p-2" href="javascript:void(0)"
-                                        (click)="navigateToTicketUpdate(r.ticketNumber)"><i class="fas fa-edit"></i></a>
-                                    <a class="p-2" href="javascript:window.print()"><i class="fas fa-print"></i></a>
+                                    <a class="p-1" href="javascript:void(0)"
+                                        (click)="navigateToTicketUpdate(r.ticketNumber,'edit')"><i class="fas fa-edit"></i></a>
+                                    <!-- <a class="p-2" href="javascript:window.print()"><i class="fas fa-print"></i></a> -->
                                     <a class="p-2" href="javascript:void(0)"
                                         (click)="OpenDeleteModal(r.ticketNumber)"><i class="fas fa-trash"></i></a>
+                                </td>
+                                <td>
                                     <a class="p-2" href="javascript:void(0)"
-                                        (click)="OpenTicketDetailModal(r.ticketNumber)"
+                                        (click)="OpenTicketDetailModal(r.ticketNumber,(r.ticketRetail-r.ticketAmountPaid))"
                                         [ngClass]="r.ticketRetail==r.ticketAmountPaid?'unclickable':''"><i
                                             class="fas fa-plus"></i>Add</a>
                                 </td>
@@ -125,7 +125,7 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Add Detail</h4>
+                <h4 class="modal-title">Add Ticket Instalment</h4>
                 <button type="button" class="close" (click)="CloseTicketDetailModal()" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
