--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.unclickable{
+    pointer-events: none;
+    opacity: 0.7;
+}
+.bg-color{
+    background-color: rgb(243, 168, 168);
+}
